fixed overflow issue on edge

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -3,6 +3,11 @@
 @import 'variables';
 @import 'components/reset';
 
+body{
+  max-width:100%;
+  overflow-x:hidden;
+}
+
 ::-moz-selection {
   color: $white;
   background: $darkred;
